--- a/css/style.css
+++ b/css/style.css
@@ -40,15 +40,18 @@ ul { margin: 0; padding: 0; }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
+
 h1 {
   display: inline-block;
   margin: 0 0 30px 0;
   font-size: 30px;
   padding-bottom: 5px;
 }
+
   h1:hover {
     border-color: #72a329;
   }
+  
 h3 {
   color: rgba(255,255,255, .7);
   font-size: 14px;
@@ -79,7 +82,6 @@ a:hover {
     margin-top: -10px;
   }
 
-
 /* button styles */
 .btn {
   position: relative;
@@ -101,18 +103,22 @@ a:hover {
   -webkit-transition: .3s;
   transition: .3s;
 }
+
   .btn:hover {
     border-color: #fff;
     color: #fff;
   }
+  
   .btn:active {
     top: 2px;
   }
+  
   .btn.active {
     background-color: rgba(0,0,0,.1);
     border-color: #fff;
     color: #fff;
   }
+  
   .btn:focus {
     color: #fff;
     outline: none;
@@ -131,10 +137,12 @@ textarea.form-control:focus {
   border: none;
   border-color: #d0d0d0;
 }
+
 form .btn {
   margin-left: 0;
   margin-right: 0;
 }
+
 label {
   font-weight: normal;
 }
@@ -224,7 +232,7 @@ label {
     font-size: 30px;
     line-height: 70px;
     font-weight: normal;
-    color: #ffde36;
+    color: #003303;
     padding: 0 30px 0 0;
     -webkit-transition: .4s;
     transition: .4s;
@@ -377,10 +385,6 @@ label {
     font-size: 50px;
     color: #fff;
     font-family:celticFont;
-  }
-  
-  #sublogo {
-  	font-family:celticFont;
   }
   
   .welcome .scroll-down i {
