--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,13 @@ html, body {
   height: 100%;
 }
 
-.logo {
+/*.logo {
   background-color:rgba(255, 255, 255, 0.2);
-
 }
+*/
 
 .background {
   filter: blur(5px);
-  opacity: .5;
 }
 
 .clearfix {
