--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,9 @@ html, body {
   background-color:rgba(255, 255, 255, 0.2);
 }
 */
-
+span:hover + div {
+    display: block;
+}
 .background {
   filter: blur(5px);
 }
@@ -136,9 +138,10 @@ textarea.form-control,
 input.form-control:focus,
 textarea.form-control:focus {
   outline: none;
-  border-radius: 0;
+  border-radius: 4px;
   box-shadow: none;
   border: none;
+  background-color: white;
   border-color: #d0d0d0;
 }
 
