--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,6 @@ textarea.form-control:focus {
   outline: none;
   border-radius: 4px;
   box-shadow: none;
-  border: none;
   background-color: white;
   border-color: #d0d0d0;
 }
@@ -322,7 +321,7 @@ textarea.form-control:focus {
   }
     .section.welcome .content {
       text-align: center;
-      padding-top: 150px;
+      padding-top: 280px;
     }
     .section.welcome a { color: rgba(255,255,255,.8); }
     .section.welcome a:hover { color: #fff; }
@@ -337,7 +336,7 @@ textarea.form-control:focus {
     display: block;
     text-align: center;
     font-size: 50px;
-    color: #fff;
+    /*color: #fff;*/
     font-family:celticFont;
   }
 
@@ -757,6 +756,7 @@ textarea.form-control:focus {
  *
  */
     .social-media {
+      margin-top:40px;
       margin-bottom: 20px;
       color: #fff;
       width: 100%;
