--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5608,7 +5608,10 @@ body.modal-open,
   z-index: 1040;
   display: none;
   overflow: auto;
-  overflow-y: scroll;
+  overflow-y: scroll;}
+  .modal-body {
+  background-color: gray;
+}
 }
 
 .modal.fade .modal-dialog {
