--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ a:hover {
     color: #fff;
     outline: none;
   }
+  .button5 {background-color: #555555;} /* Black */
 
 /* Basic Form Styles */
 
