--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ html, body {
   background-repeat:no-repeat;
   background-size:contain;
   background-position:center;
+  background-attachment: fixed;
 }
 
 /*tabs-menu*/
@@ -227,6 +228,7 @@ textarea.form-control:focus {
     padding: 0 30px 0 0;
     -webkit-transition: .4s;
     transition: .4s;
+    color: #ffffff;
   }
 
   /* Smaller device menu styles */
@@ -252,7 +254,7 @@ textarea.form-control:focus {
 
   .navbar .navbar-nav li a {
     margin: 20px 5px;
-    color: #777;
+    color: #ffffcc;
     height: 30px;
     line-height: 30px;
 
@@ -260,7 +262,7 @@ textarea.form-control:focus {
     -moz-border-radius: 15px;
     border-radius: 15px;
 
-    padding: 0 20px;
+    padding: 0 10px;
     transition: background-color .2s;
     -webkit-transition: background-color .2s;
   }
@@ -288,6 +290,10 @@ textarea.form-control:focus {
     }
 
   }
+
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  color: #ffffff;
+}
 
 /*  SECTION
  *    stylings for sections
