--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html, body {
  }
 
 #home {
-  background-image: url('../img/irish_lion_historic-darker.jpg');
+  background-image: url('../img/irish_lion_historicArtboard 1.jpg');
   background-repeat:no-repeat;
   background-size:contain;
   background-position:center;
@@ -340,10 +340,7 @@ textarea.form-control:focus {
     .section.image h3 { color: rgba(255,255,255, .7); }
 
   /* WELCOME SECTION */
-/*  @font-face {
-  	font-family: celticFont;
-  	src: url(../fonts/Celtic.ttf);
-  }*/
+
 
   .section.welcome {
     padding-top: 0;
