--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html, body {
  }
 
 #home {
-  background-image: url('../img/irish_lion_historicArtboard 1.jpg');
+  background-image: url('../img/irish_lion_historic.jpg');
   background-repeat:no-repeat;
   background-size:contain;
   background-position:center;
