--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html, body {
   font-family: "Palatino Linotype", "Book Antiqua", "Palatino", "serif";
   height: 100%;
   background-color: black;
+  font-size: 19px;
 }
 
 #front{
@@ -103,7 +104,7 @@ a:hover {
 /* button styles */
 .btn {
   position: relative;
-  font-size: 14px;
+  font-size: 19px;
   line-height: 20px;
   padding: 10px;
   text-shadow: none;
@@ -172,6 +173,11 @@ textarea.form-control:focus {
  *
  *
  */
+
+#navbar {
+  height: 70px;
+}
+
 .navbar-right {
   display: inline-block;
   float:right;
@@ -186,7 +192,7 @@ textarea.form-control:focus {
 }
 
 .address {
-  margin-top: 5rem;
+  margin-top: 3.75rem;
   font-size: 22px;
   color: #ffffcc;
 }
@@ -218,11 +224,11 @@ textarea.form-control:focus {
     margin-right: 15px;
   }
   .navbar i {
-    font-size: 15px;
+    font-size: 19px;
   }
   .navbar a.navbar-brand {
     max-width: 400px;
-    font-size: 16px;
+    font-size: 19px;
     line-height: 70px;
     font-weight: normal;
     padding: 0 30px 0 0;
@@ -490,7 +496,7 @@ textarea.form-control:focus {
       width: 100px;
       padding-top: 25px;
 
-      border: 4px solid rgba(237,200,14,.7);
+      border: 4px solid #ffffff;
       -webkit-border-radius: 50%;
       -moz-border-radius: 50%;
       border-radius: 50%;
