--- a/css/style.css
+++ b/css/style.css
@@ -193,9 +193,6 @@ textarea.form-control:focus {
  *
  */
 
-#navbar {
-  height: 70px;
-}
 
 .navbar-right {
   display: inline-block;
@@ -208,6 +205,7 @@ textarea.form-control:focus {
 
 .navbar .navbar-collapse {
   text-align: center;
+  background-color: black;
 }
 
 .address {
@@ -248,7 +246,7 @@ textarea.form-control:focus {
   .navbar a.navbar-brand {
     max-width: 400px;
     font-size: 19px;
-    line-height: 70px;
+    line-height: 80px;
     font-weight: normal;
     padding: 0 30px 0 0;
     -webkit-transition: .4s;
@@ -280,7 +278,7 @@ textarea.form-control:focus {
   .navbar .navbar-nav li a {
     margin: 20px 5px;
     color: #ffffcc;
-    height: 30px;
+    height: 4ß0px;
     line-height: 30px;
 
     -webkit-border-radius: 15px;
