--- a/css/style.css
+++ b/css/style.css
@@ -22,16 +22,27 @@ formformhtml, body {
 }
 
 /*menu carousel*/
-#mycarousel h3 {
-  display: inline-block;
-  padding: 10px;
-  background: #B9121B;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
 
 #mycarousel .carousel-inner {
   height: 400px;
+}
+
+#eventCarousel .carousel-inner img {
+    height: 100%;
+}
+
+.carousel-caption {
+    position: relative;
+    bottom: -1200px;
+    left: 200px;
+    background: rgba(0,0,0,.65);
+    opacity: 1;
+    padding: 20px 20px;
+    max-width: 400px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    z-index: 2;
 }
 
 /*tabs-menu*/
@@ -122,26 +133,27 @@ a:hover {
 
 /* button styles */
 .btn {
+  background-color: #47560B;
   position: relative;
   font-size: 19px;
-  line-height: 20px;
-  padding: 10px;
-  text-shadow: none;
-  box-shadow: none;
-  border: 2px solid rgba(255,255,255,.6);
+  line-height: 25px;
+  text-transform: uppercase;
+  padding: 20px;
   color: rgba(255,255,255,.8);
   background-color: 003303;
+  margin-bottom: 20px;
 
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
-  border-radius: 6px;
+  border-radius: 0px;
 
   -webkit-transition: .3s;
   transition: .3s;
 }
 
+/* button hover outline */
   .btn:hover {
-    border-color: #fff;
+    border-color: #2e3806;
     color: #fff;
   }
 
@@ -336,7 +348,7 @@ textarea.form-control:focus {
   /* White Section */
   .section.white {
     background: none;
-    background-color: #eee;
+    background-color: #ffffcc;
   }
     .section.white h1 {
       color: #4D1D12;
